<resources>
    <string name="app_name">CILANTRO CAFE</string>
    <string name="toppings">Toppings</string>
    <string name="Happy_Drink">Happy Drink</string>
    <string name="whipped_cream">whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="order">Order</string>
    <string name="name">Name</string>
</resources>
