<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/cafee" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/name" />

            <TextView
                style="@style/AlertDialog.AppCompat.hesham_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/toppings" />

            <CheckBox
                android:id="@+id/checkBox_Whipped_Cream"
                style="@style/AlertDialog.AppCompat.hesham_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/whipped_cream" />

            <CheckBox
                android:id="@+id/checkBox_Chocolate"
                style="@style/AlertDialog.AppCompat.hesham_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/chocolate" />

            <TextView
                style="@style/AlertDialog.AppCompat.hesham_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/quantity" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button1"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:onClick="increment"
                    android:background="@color/colorAccent"
                    android:text="+" />

                <TextView
                    android:id="@+id/quantity_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="1" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@color/colorAccent"
                    android:onClick="decrement"
                    android:text="-" />

            </LinearLayout>


            <TextView
                style="@style/AlertDialog.AppCompat.hesham_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/price"
                android:textScaleX="1.5"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/price_text_view"
                style="@style/AlertDialog.AppCompat.hesham_style1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="5$"
                android:textScaleX="1.5"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:onClick="submitOrder"
                android:background="@color/colorAccent"
                android:text="@string/order" />


        </LinearLayout>
    </RelativeLayout>


</LinearLayout>
</ScrollView>